[package]
name = "rust-hoj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"


[dependencies]
axum = { version = "0.4.5", features = ["multipart"] }
axum-extra = "0.1.2"
#tower-http = { version = "0.2.0", features = ["fs", "trace"] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dotenv = "0.15"
jsonwebtoken = "7"
validator = { version = "0.12.0", features = ["derive"] }
futures = "0.3"
tempfile = "3.2"

anyhow = "1.0.44"
lazy_static = "1.4.0"

deadpool-postgres = {version = "0.9", features = ["serde"]}
deadpool = "0.8.2"
tokio-postgres = "0.7.2"
mobc-redis = "0.7.0"
timer = "0.2.0"
hyper = {version =  "0.14", features = ["full"] }
rand = "0.8.3"

async-walkdir = "0.2.0"
async-fs = "1.5.0"
async-process = "1.2.0"

syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"